# najot-nur

./: .env.example  .env.production.example  .gitignore  README.md  SECURITY.md  docker-compose.deploy.yml  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.production.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  Dockerfile.prod  README.md  alembic.ini  pyproject.toml  requirements.txt  telegram_login_session.session
backend/alembic/: env.py
backend/alembic/versions/: 14e7271fac68_initial_schema.py  a1b2c3d4e5f6_add_quiz_media.py  a3f2c1d4e5b6_add_audiobook_audio_url.py  b1c2d3e4f5a6_add_practicum_expert_transcript.py  b7c8d9e0f1a2_add_char_level_analysis.py  c1d2e3f4a5b6_add_quizzes.py  c89d42876cce_add_lesson_is_demo.py  c9d3e2f1a0b7_add_support_messages.py  d1e4f3a2b8c9_add_orders_table.py  d2e3f4a5b6c7_add_practicums.py  e2b5c7d9f0a1_extend_orders_for_audiobooks.py  e2f4a1b3c5d6_add_support_thread_reads.py  e5f6g7h8i9j0_practicum_submissions.py  f3a1b2c4d5e6_merge_heads.py  f4a5b6c7d8e9_add_certificate_requests.py  g7h8i9j0k1l2_add_security_sessions.py  h8i9j0k1l2m3_update_order_payment_method.py  j1k2l3m4n5o6_add_gift_payment_method.py  k2l3m4n5o6p7_add_user_location_fields.py  l3m4n5o6p7q8_add_push_city_audience.py  m4n5o6p7q8r9_add_user_pinfl.py  n5o6p7q8r9s0_drop_user_pinfl.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: audit.py  config.py  database.py  exceptions.py  logging.py  metrics.py  middleware.py  (+6 more)
backend/tests/: test_auth_config.py  test_char_analysis.py  test_otp_check.py  test_stt.py
(+387 files in other folders)
